update: 뉴스 기반 주식결과 예측 기능 추가(Chatgpt)